examples/test/testpolicy8356.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8356
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key4: value44
      key18: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key27: value0
      podSelector:
        matchLabels:
          key13: value15
